k8-deployments/exchange-k8.yml
apiVersion: v1
kind: Service
metadata:
  name: exchange-service
spec:
  selector:
    app: exchange-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exchange-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exchange-service
  template:
    metadata:
      labels:
        app: exchange-service
    spec:
      containers:
        - name: exchange-container
          image: madk98/swappy-project:exchange-service
          imagePullPolicy: Always
          resources:
            requests:
              memory: 1Gi # Minimum memory the container is guaranteed
              cpu: 250m
            limits:
              memory: 2Gi
              cpu: 500m # Maximum memory the container can use
          ports:
            - containerPort: 8080
