k8-deployments/portfolio-k8.yml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
spec:
  selector:
    app: portfolio-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8100
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-service
  template:
    metadata:
      labels:
        app: portfolio-service
    spec:
      containers:
        - name: portfolio-container
          image: madk98/swappy-project:portfolio-service
          imagePullPolicy: Always
          ports:
            - containerPort: 8100
          resources:
            requests:
              memory: 1Gi # Minimum memory the container is guaranteed
              cpu: 250m
            limits:
              memory: 2Gi # Maximum memory the container can use
              cpu: 500m
