k8-deployments/ingress-k8.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.cryptfolio.pro
      secretName: gateway-tls-secret
  rules:
    - host: api.cryptfolio.pro
      http:
        paths:
          - path: /user-service
            pathType: Prefix
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 80
          - path: /portfolio-service
            pathType: Prefix
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 80
          - path: /exchange-service
            pathType: Prefix
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 80
          - path: /zipkin
            pathType: Prefix
            backend:
              service:
                name: zipkin
                port:
                  number: 9411
